<resources>
    <string name="app_name">CU E-Sports</string>
    <string name="cu_esportz">CU ESportz</string>
    <string name="gaming_platform_for_everyone">Gaming Platform For Everyone</string>
    <string name="todo">TODO</string>
    <string name="esportz">Esportz</string>
    <string name="cu">CU</string>
    <string name="sign_in_or_login" />
    <string name="string_sign_in_or_login">login or sighup</string>
    <string name="title_activity_login_in">Login_in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_page">Login Page</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="login">Login</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="no_account_yet_create_an_account">No Account Yet? Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="forget_password">Forget Password</string>
    <string name="E_mail">E-Mail:</string>
    <string name="Name">User Name:</string>
    <string name="TName">Tournament Name:</string>
    <string name="THost">Host A Tournament</string>
    <string name="phone_no">Contact Number:</string>
    <string name="Map_Selection">Select Map:</string>
    <string name="View">Perspective:</string>
    <string name="Prize">Prize Pool: (In Rupees)</string>
    <string name="Rank">Number Of Rank:</string>
    <string name="K_Prize">Prize Per Kill:</string>
    <string name="referral_code">Referral Code:</string>
    <string name="back_to_home">Back To Home</string>
    <string name="full_name">Aman Saxena</string>
    <string name="Host">Host</string>
    <string name="p_ubg">PUBG MOBILE</string>
    <string name="p_lite">PUBG LITE</string>
    <string name="cod">CALL OF DUTY</string>
    <string name="ash_9">ASHPHALT 9</string>
    <string name="f_fire">FREE FIRE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_contest">ContestActivity</string>
    <string name="n1_gaming">N1 Gaming</string>
    <string name="be_ready_with_loaded_gun">Be ready with loaded gun.</string>
    <string name="squad_battle_4">Squad Battle #4</string>
    <string name="time_28_05_2020_at_08_00_pm">Time: 28/05/2020 at 08:00 PM</string>
    <string name="prize_pool">PRIZE POOL</string>
    <string name="per_kill">PER KILL</string>
    <string name="entry_fee">ENTRY FEE</string>
    <string name="_120">120</string>
    <string name="_1">1</string>
    <string name="free">FREE</string>
    <string name="type">TYPE</string>
    <string name="version">VERSION</string>
    <string name="map">MAP</string>
    <string name="squad">SQUAD</string>
    <string name="tpp">TPP</string>
    <string name="watch_match">WATCH MATCH</string>
    <string name="not_joined">NOT JOINED</string>
    <string name="contest_type_logo">Contest type logo</string>
    <string name="pubg_mobile">PUBG MOBILE</string>
    <string-array name="map">
        <item>Erangle</item>
        <item>Shanok</item>
        <item>Miramar</item>
    </string-array>
    <string-array name="Participants">
        <item>Squad</item>
        <item>Duo</item>
        <item>Solo</item>
    </string-array>
    <string-array name="View">
        <item>TPP</item>
        <item>FPP</item>
    </string-array>
    <string name="title_activity_earn">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>