<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:cardCornerRadius="7dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/img_contact"
            android:background="#404040"
            android:layout_marginTop="25dp"
            android:layout_marginStart="22dp"
            android:src="@drawable/appicon"
            android:contentDescription="@string/contest_type_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/name_contact"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/breeserif"
            android:textColor="#4A4A4A"
            android:layout_marginLeft="100dp"
            android:text="@string/squad_battle_4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_contact"
            android:layout_marginTop="55dp"
            android:textColor="#6E6E6E"
            android:fontFamily="@font/breeserif"
            android:layout_marginLeft="100dp"
            android:text="@string/time_28_05_2020_at_08_00_pm"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="22dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/breeserif"
                android:text="@string/prize_pool"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/per_kill"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/entry_fee"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_marginLeft="22dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/coin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textStyle="bold"
                android:fontFamily="@font/breeserif"
                android:text="@string/_120"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="80dp"
                android:src="@drawable/coin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textStyle="bold"
                android:fontFamily="@font/breeserif"
                android:text="@string/_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:textStyle="bold"
                android:fontFamily="@font/breeserif"
                android:text="@string/free"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="155dp"
            android:layout_marginLeft="22dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/type"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="83dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/version"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/map"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:layout_marginLeft="22dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/breeserif"
                android:text="@string/squad"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:textStyle="bold"
                android:fontFamily="@font/breeserif"
                android:text="@string/tpp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:textStyle="bold"
                android:fontFamily="@font/breeserif"
                android:text="@string/free"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="22dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/breeserif"

                android:background="@drawable/rounded_corner"
                android:backgroundTint="#0CB800"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/watch_match"/>
            <Button
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/breeserif"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColor="#FFFFFF"

                android:background="@drawable/rounded_corner"
                android:backgroundTint="#E36262"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/not_joined"/>

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>