<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Host">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-2dp"
        android:layout_marginBottom="581dp"
        android:background="@drawable/gradent_efforts"
        android:fontFamily="cursive"
        android:paddingVertical="30dp"
        android:text="@string/THost"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="115dp"
        android:text="@string/TName"
        android:textColor="@color/colorAccent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="84dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="205dp"
        android:text="@string/Map_Selection"
        android:textColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="231dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="84dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="246dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="81dp"
        android:text="@string/Map_Selection"
        android:textColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="232dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="280dp"
        android:text="@string/Prize"
        android:textColor="@color/colorAccent" />

    <EditText
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="30dp"
        android:inputType="text" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="84dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="246dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="81dp"
        android:text="@string/View"
        android:textColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="219dp"
        android:layout_marginTop="320dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="241dp"
        android:layout_marginTop="364dp"
        android:text="@string/Rank"
        android:textColor="@color/colorAccent" />

    <EditText
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="386dp"
        android:layout_marginEnd="46dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="364dp"
        android:text="@string/K_Prize"
        android:textColor="@color/colorAccent" />

    <EditText
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="386dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="text" />

    <Button
        android:id="@+id/button_Host"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="153dp"
        android:background="@drawable/button_bg"
        android:text="@string/Host"
        android:textColor="#fafafa" />

</RelativeLayout>